--- a/ASP.NET MVC 6 Auth Samples/002/Auth0Sample001/appsettings.json
+++ b/ASP.NET MVC 6 Auth Samples/002/Auth0Sample001/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "",
-    "ClientId": ""
+    "Domain": "dev-n1b7bzid.us.auth0.com",
+    "ClientId": "ismVGSek9cW0BaHGCgPusAVbHxMpMVm8"
   }
 }
